# smart-plant-care-assistant

./: .env.example  .gitignore  CHANGELOG.md  CLI_DEPLOYMENT_PLAN.md  DEPLOYMENT.md  DEPLOYMENT_CONFIGURATION_VERIFICATION.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_TEST_PLAN.md  MOBILE_ACCESS.txt  QUICK_START.md  README.md  REPLIT_DEPLOYMENT.md  STATUS.txt  STREAMLIT_DEPLOYMENT_INSTRUCTIONS.md  STREAMLIT_DEPLOYMENT_SUMMARY.md  STREAMLIT_README.md  SUCCESS.txt  app.py  asset-manifest.json  auth.py  cleanup.ps1  deploy.bat  email_agent.py  full_plant_agent.py  index.html  main.py  manifest.json  package-lock.json  package.json  packages.py  plant_agent.py  plant_analysis.py  plant_care_agent.py  requirements.txt  run.bat  setup.bat  start.bat  streamlit_app.py  style.css  tailwind.config.js  (+1 more)
.streamlit/: config.toml
backend/: .replit  README.md  app.py  pyproject.toml  replit.nix  requirements.txt
github-deploy/: FINAL_DEPLOYMENT_SUMMARY.md  README.md  deploy.bat  deploy.sh  deploy_to_github.py  requirements.txt  test_deployment.py  verify_deployment.py
smart-plant-care-assistant-repo/: .gitignore  plant_analysis.py  streamlit_app.py
src/: App.tsx  index.css
src/services/: langGraphService.ts  llmService.ts  plantAnalysisService.ts
static/css/: main.dfc14c22.css  main.dfc14c22.css.map
static/js/: 453.b56ca7da.chunk.js  453.b56ca7da.chunk.js.map  main.0ebcd8f0.js  main.0ebcd8f0.js.map  (+4 more)
streamlit-deploy/: .env.example  DEPLOYMENT_SUMMARY.md  FINAL_DEPLOYMENT_SUMMARY.md  README.md  deploy.bat  deploy.sh  requirements.txt  streamlit_app.py  test_deployment.py
(+1 files in other folders)
